added files for project

--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <head>
   <meta charset="utf-8">
   <title>λ Metroid Fan</title>
-<<<<<<< HEAD
-
 <style>
   body {
     background-color: #dcedc1;
@@ -21,9 +19,6 @@
 
 
 </style>
-
-=======
->>>>>>> diogit/main
 </head>
 
 <body>
@@ -48,7 +43,16 @@
         <th>Awarded</th>
       </tr>
     </thead>
-    <tr>
+</head>
+
+<body>
+  <img src="images/metroid_emblem.png" alt="Metroid Emblem" width="135" height="135">
+  <h1>Metroid Fan</h1>
+  <p><em>Weird man. Weird plan. I hope you understand. If you can.</em></p>
+  <hr>
+  <h3>Education</h3>
+  <table>
+   <tr>
       <td>High School</td>
       <td>Diploma</td>
       <td>May, 1998</td>
@@ -101,18 +105,25 @@
       <td>Associate of Applied Science, Information Technology</td>
       <td>December, 2018</td>
     </tr>
-<<<<<<< HEAD
   </table>
   
   <hr>
   
-=======
     <hr>
   </table>
->>>>>>> diogit/main
-  <!--End table for Education-->
+  </table>
 
-  <!--Start table for listing Hobbies-->
+  <ul>
+    <li>High School - Diploma - May, 1998</li>
+    <li>USAF - Basic Military Training, April 1999</li>
+    <li>USAF - Security Forces Apprentice Course (6UO) - June, 1999</li>
+    <li>USAF - Security Forces Distance Learning and Training Course (8IJ) - July, 1999</li>
+    <li>USAF - Personnel Distance Learning and Training Course (9AA) - June, 2001</li>
+    <li>USAF - Personnel Apprentice (P5A) - July, 2003</li>
+    <li>USAF - Airman Leadership School - September, 2004</li>
+    <li>USAF - Personnel Craftsman - May, 2006</li>
+    <li>LDCC - Associate of Applied Science, Information Technology - December, 2018</li>
+  </ul>
   <h3>Hobbies</h3>
   <ol>
     <li><a href="https://linoxide.com/linux-command/cool-things-to-do-with-linux">GNU/Linux</a></li>
@@ -168,10 +179,7 @@
   <!--Contact me, then link below it for user to partake-->
   <h3>⬇ Contact Me ⬇</h3>
   <li><a href="contact_me.html">(Or Lack Thereof)</a></li>
-<<<<<<< HEAD
-=======
   <hr>
->>>>>>> diogit/main
 
   <!--setup action for mailto to email me from user-->
   <form action="mailto:sloppyjoesloppysloppyjoe@lunchladyland.com" method="post" enctype="text/plain">
@@ -203,3 +211,9 @@
   --
   --
   -->
+
+  <li><a href="contact_me.html">Contact Me (Or Lack Thereof)</a></li>
+
+</body>
+
+</html>
