--- a/index.html
+++ b/index.html
@@ -7,12 +7,27 @@
 </head>
 
 <body>
-  <img src="images/metroid_emblem.png" alt="Metroid Emblem" width="135" height="135">
-  <h1>Metroid Fan</h1>
-  <p><em>Weird man. Weird plan. I hope you understand. If you can.</em></p>
+  <table cellspacing="27">
+    <tr>
+      <td><img src="images/metroid_emblem.png" alt="Metroid Emblem" width="135" height="135"></td>
+      <td><h1>Metroid Fan</h1>
+        <p><em>Weird man. Weird plan. I hope you understand. If you can.</em></p></td>
+    </tr>
+  </table>
+
+  
+  
   <hr>
   <h3>Education</h3>
+  
   <table>
+    <thead>
+      <tr>
+        <th>Institution</th>
+        <th>Award</th>
+        <th>Awarded</th>
+      </tr>
+    </thead>
     <tr>
       <td>High School</td>
       <td>Diploma</td>
