--- a/index.html
+++ b/index.html
@@ -256,13 +256,29 @@
   <!--End two-column table for Skills-->
 
   <br>
-  
+
   <!--Contact me, then link below it for user to partake-->
   <h3>⬇ Contact Me ⬇</h3>
   <li><a href="contact_me.html">(Or Lack Thereof)</a></li>
-<hr>
-</body>
+  <hr>
 
+  <!--setup action for mailto to email me from user-->
+  <form action="mailto:sloppyjoesloppysloppyjoe@lunchladyland.com" method="post" enctype="text/plain">
+    <!--set variable yourName for email body-->
+    <label>Your Name:</label>
+    <input type="text" name="yourName" value=""><br>
+    <!--set variable yourEmail for email body-->
+    <label>Your Email:</label>
+    <input type="email" name="yourEmail" value=""><br>
+    <!--set variable yourMessage for email body-->
+    <label>Your Message:</label><br>
+    <textarea name="name" id="" cols="30" rows="10"></textarea><br>
+    <input type="submit" name="yourMessage">
+  <!--end form-->
+  </form>
+<!--end body-->
+</body>
+<!--end html-->
 </html>
 
 <!--Please tell me there is an easier way to type comments in vscode
