Section IV, #33 / Modified contact_me.html

--- a/contact_me.html
+++ b/contact_me.html
@@ -22,19 +22,10 @@
         </div>
       </h3>
 
-      </ul>
+      <center><img src="file:///W:/web%20development/HTML%20-%20Personal%20Site/images/phones-down-1.png" alt="Communication Disrupted" style="width:27%"></center>
+      
+    </ul>
 
-  <div class="container-for-images">
-    
-   <div class="container">
-    <img src="file:///W:/web%20development/HTML%20-%20Personal%20Site/images/phones-down-1.png" alt="Communication Disrupted" style="width:33%">
-   </div>
-
-   <div class="container">
-    <img src="file:///W:/web%20development/HTML%20-%20Personal%20Site/images/fedora_specs.png" alt="System Disrputed" style="width:33%">
-   </div>
-  </div>
-
-</body>
+  </body>
 
 </html>
