--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
 <head>
   <meta charset="utf-8">
   <title>λ Metroid Fan</title>
+
+<style>
+  body {
+    background-color: #dcedc1;
+  }
+
+  hr {
+    border-style: none;
+    border-top-style: dotted;
+    border-color: #008b8b;
+    border-width: 7px;
+    width: 4%;
+  }
+
+
+</style>
+
 </head>
 
 <body>
@@ -81,8 +98,10 @@
       <td>Associate of Applied Science, Information Technology</td>
       <td>December, 2018</td>
     </tr>
-    <hr>
   </table>
+  
+  <hr>
+  
   <!--End table for Education-->
 
   <!--Start table for listing Hobbies-->
@@ -141,7 +160,6 @@
   <!--Contact me, then link below it for user to partake-->
   <h3>⬇ Contact Me ⬇</h3>
   <li><a href="contact_me.html">(Or Lack Thereof)</a></li>
-  <hr>
 
   <!--setup action for mailto to email me from user-->
   <form action="mailto:sloppyjoesloppysloppyjoe@lunchladyland.com" method="post" enctype="text/plain">
@@ -155,9 +173,15 @@
     <label>Your Message:</label><br>
     <textarea name="name" id="" cols="30" rows="10"></textarea><br>
     <input type="submit" name="yourMessage">
-  <!--end form-->
+  
+  <hr>
+  
+    <!--end form-->
   </form>
-<!--end body-->
+
+  <center><img src="images/diortemew_logo.png" alt="diortemew emblem" height="333"></center>
+
+  <!--end body-->
 </body>
 <!--end html-->
 </html>
