fixed broken image link

--- a/contact_me.html
+++ b/contact_me.html
@@ -22,7 +22,7 @@
         </div>
       </h3>
 
-      <center><img src="file:///W:/web%20development/HTML%20-%20Personal%20Site/images/phones-down-1.png" alt="Communication Disrupted" style="width:27%"></center>
+      <center><img src="images/phones-down-1.png" alt="Communication Disrupted" style="width:27%"></center>
       
     </ul>
 
