after training break, tidy changes to give me a placeholder

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>λ Metroid Fan</title>
 
+<!--body will be background color dcedc1 with dotted bor-top-style and bor background at 008b8b, 7px bor-wid and 4% width-->
 <style>
   body {
     background-color: #dcedc1;
@@ -104,7 +105,7 @@
   
   <!--End table for Education-->
 
-  <!--Start table for listing Hobbies-->
+  <!--Start table for Hobbies-->
   <h3>Hobbies</h3>
   <ol>
     <li><a href="https://linoxide.com/linux-command/cool-things-to-do-with-linux">GNU/Linux</a></li>
@@ -115,11 +116,11 @@
     <li><a href="https://www.maketecheasier.com/best-linux-games">Gaming</a></li>
   </ol>
   <hr>
-  <!--End table for listing Hobbies-->
+  <!--End table for Hobbies-->
 
 
 
-  <!--Start table for two-column table
+  <!--Start two-column table
       Header3 = Skills (list a skill, then it's rating)
       [1-5 stars where 1 is lowest level, 5 is highest]-->
   <table cellspacing="13 px">
@@ -157,7 +158,8 @@
 
   <br>
 
-  <!--Contact me, then link below it for user to partake-->
+  <!--Contact me, then link below it for user to partake
+    (fake until real world applications begin after this training)-->
   <h3>⬇ Contact Me ⬇</h3>
   <li><a href="contact_me.html">(Or Lack Thereof)</a></li>
 
